docs/0.0.5/integrations/cohere/introduction.mdx
---
title: 'Cohere integration'
sidebarTitle: 'Get Started'
---

DokuMetry SDKs (`dokumetry`) empowers you to effortlessly track and monitor Cohere usage data and metrics from your Python/NodeJS code. 

## Get Started 

The integration is compatible with Cohere SDK versions >=4.0.0.

<Tabs>
  <Tab title="Python">
    ```shell
    pip install dokumetry
    ```

    ```python
    import cohere
    import dokumetry

    co = cohere.Client('YOUR_API_KEY')

    dokumetry.init(llm = co, doku_url = "YOUR_DOKU_URL", api_key = "YOUR_DOKU_TOKEN")
    ```
  </Tab>
  <Tab title="Javascript">
    ```shell
    npm install dokumetry
    ```

    ```javascript
    import { CohereClient } from "cohere-ai";
    import DokuMetry from 'dokumetry';

    const co = new CohereClient({
            token: "<<apiKey>>",
    });

    DokuMetry.init({llm: co, dokuUrl: "YOUR_DOKU_URL", apiKey: "YOUR_DOKU_TOKEN"})
    ```
  </Tab>
</Tabs>

## Supported Endpoints
The following Cohere Endpoints are supported for monitoring with DokuMetry

- [Chat](/0.0.5/integrations/cohere/examples/chat)
- [Generate](/0.0.5/integrations/cohere/examples/generate)
- [Summarize](/0.0.5/integrations/cohere/examples/summarize)
- [Embed](/0.0.5/integrations/cohere/examples/embed)

## Parameters

| Parameter         | Description                                               | Required      |
|-------------------|-----------------------------------------------------------|---------------|
| llm               | Language Learning Model (LLM) Object to track             | Yes           |
| doku_url          | URL of your Doku Instance                                 | Yes           |
| api_key           | Your Doku API key                                         | Yes           |
| environment       | Custom environment tag to include in your metrics         | Optional      |
| application_name  | Custom application name tag for your metrics              | Optional      |
| skip_resp         | Skip response from the Doku Ingester for faster execution | Optional      |

## Advanced Usage
When using DokuMetry in Production environments, It is recommened to set `skip_resp = true` for faster porcessing. 

To filter your LLM Usage according application or the environment, set the `application` and `environment` paramaters with the actual values.

## Requirements
Python >= 3.7 is supported.

If you are interested in other runtime environments, please open or upvote an issue on [GitHub](https://github.com/dokulabs/doku/issues).

---

<CardGroup cols={2}>
<Card title="Connections" href="/0.0.5/connections/intro" icon='link'>
Connect to your existing Observablity Platform
</Card>
<Card title="API Refernce" href="/0.0.5/api-reference/introduction" icon='code'>
OpenAPI specification for API Endpoints in Doku 
</Card>
</CardGroup>